--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -677,7 +677,7 @@ footer .legal ul li:last-child {
 
 .split-box {
   background-color: #FBFBFD;
-  padding-top: 12px;
+  margin-top: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -711,6 +711,22 @@ footer .legal ul li:last-child {
   color: #0071E3;
 }
 
+@media screen and (max-width: 1360px) {
+  .watch-big-box {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 950px) {
+  .big-watch-2 {
+    width: 270px;
+  }
+}
+@media screen and (max-width: 1060px) {
+  .big-watch-3 {
+    width: 310px;
+  }
+}
 input[type=text],
 select,
 textarea {
