--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -473,7 +473,7 @@
 }
 .split-box{
   background-color: #FBFBFD;
-  margin-top: 12px;
+  padding-top: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
