--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -723,7 +723,7 @@ footer .legal ul li:last-child {
 
 .split-box {
   background-color: #FBFBFD;
-  margin-top: 12px;
+  padding-top: 12px;
   display: flex;
   justify-content: center;
   align-items: center;
