--- a/Apple_store/partials/_header.scss
+++ b/Apple_store/partials/_header.scss
@@ -1,88 +1,132 @@
 // Header
 .header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 5;
-    height: 48px;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    padding:1.5rem 9%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  height: 48px;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1.5rem 9%;
 
+  .navbar li {
+    font-size: 1.7rem;
+    font-weight: 400;
+    display: inline-block;
+    margin: 0 1rem;
+    z-index: 100;
 
-    .navbar li {
-        font-size: 1.7rem;
-        font-weight: 400;
-        display: inline-block;
-        margin: 0 1rem;
-        z-index: 100;
+    a {
+      color: #cdcdcd;
+      padding: 0 2.5rem;
+      text-decoration: none;
 
-        a {
-            color: #cdcdcd;
-            padding: 0 2.5rem;
-            text-decoration: none;
-
-            &:hover {
-                color: white;
-            }
-        }
+      &:hover {
+        color: white;
+      }
     }
-    .logo {
-        padding: 0.2rem;
-        font-size: 3rem;
-        font-weight: 700;
-        color: #f5f5f7;
-        text-decoration: none;
+  }
+  .logo {
+    padding: 0.2rem;
+    font-size: 3rem;
+    font-weight: 700;
+    color: #f5f5f7;
+    text-decoration: none;
 
-        &:hover {
-            color: white;
-        }
+    &:hover {
+      color: white;
     }
+  }
 }
 
 #menu-btn {
-    font-size: 2.5rem;
-    color: #f5f5f7;;
-    display: none;
-    cursor: pointer;
+  font-size: 2.5rem;
+  color: #f5f5f7;
+  display: none;
+  cursor: pointer;
 }
 
-.nav_items_xmark{
+.nav_items_xmark {
+  display: flex;
+  justify-content: flex-start;
+  gap: 47%;
+  // padding-left: 2rem;
+  // padding-top: 2rem;
+  padding: 1.5rem 2rem 1rem;
+  width: 100%;
+
+  i {
+    font-size: 3.5rem;
+  }
+}
+
+// .nav-item-booking {
+//   list-style: none;
+
+//   a {
+//     font-size: 1.7rem;
+//     font-weight: 500;
+//     padding: 0.5rem 1rem;
+//     border-radius: 8px;
+//     border: 2px solid #f5f5f7;
+//     cursor: pointer;
+//     color: #f5f5f7;
+
+//     &:hover {
+//       color: white;
+//       border: 2px solid white;
+//     }
+//   }
+// }
+
+// Mobile navbar search function
+
+#nav_search{
+    display: none;
+}
+
+.mob_nav_search {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+
+  .search-container {
     display: flex;
-    justify-content: flex-start;
-    gap: 47%;
-    // padding-left: 2rem;
-    // padding-top: 2rem;
-    padding: 1.5rem 2rem 5rem;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
 
-    i{
-        font-size: 3.5rem;
+    .form_search {
+      display: flex;
+      border: 1px solid #282828;
+      border-radius: 1rem;
+      min-width: 80%;
+      margin: auto;
+      background-color: #282828;
     }
 
-    border-bottom: 1px solid #cdcdcd;
-}
+    input {
+      padding-left: 1rem;
+      color: #6e6e73;
 
-.nav-item-booking {
-    list-style: none;
-
-    a {
-        font-size: 1.7rem;
-        font-weight: 500;
-        padding: 0.5rem 1rem;
-        border-radius: 8px;
-        border: 2px solid #f5f5f7;;
-        cursor: pointer;
-        color: #f5f5f7;
-
-        &:hover {
-            color: white;
-            border: 2px solid white;
-        }
+      background-color: #282828;
+      font-size: 2.5rem;
+      font-weight: 300;
     }
-}
 
+    .fa-search {
+      padding: 1rem 1rem;
+      font-size: 2rem;
+      color: #787878;
+      background-color: #282828;
+    }
+  }
+  border-bottom: 1px solid #cdcdcd;
+  padding-bottom: 2rem;
+}
