--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -130,7 +130,7 @@ body {
   }
 
   .presentcard {
-    min-height: 40vh;
+    min-height: 50vh;
     .content {
       margin-top: 30rem;
     }
@@ -157,7 +157,6 @@ body {
     // Boxar first page
     .gallery .box-container {
       columns: 2 37rem;
-      
 
       .box-gallery1,
       .box-gallery2,
@@ -167,6 +166,46 @@ body {
       .box-gallery6 {
         min-height: 40vh;
         margin-bottom: 1rem;
+      }
+    }
+  }
+
+  @media (min-width: 297.98px) and (max-width: 557.98px) {
+    html {
+      font-size: 50%;
+    }
+
+    // Home page media
+
+    .home {
+      min-height: 40vh;
+      .big_text_xl {
+        font-size: 6rem;
+        font-weight: 500;
+        padding: 3rem 0 5rem;
+      }
+    }
+
+    .presentcard {
+      .content {
+        font-size: 40%;
+        margin-top: 30rem;
+      }
+      .big_text_xl_light {
+        font-size: 4rem;
+      }
+      .text_light_y {
+        font-size: 2.5rem;
+      }
+    }
+
+    // About Ipad
+    .about_ipad {
+      height: 40vh;
+      
+      .content_right {
+        margin: 0;
+        padding-right: 5rem;
       }
     }
   }
