--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -659,6 +659,8 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
+    padding-bottom: 5rem;
+    border-bottom: 1px solid #7b7b7b;
     
     .form_search{
       display: flex;
