--- a/Apple_store/partials/_text-image.scss
+++ b/Apple_store/partials/_text-image.scss
@@ -212,6 +212,10 @@
     width: 250px;
     padding: 10rem 0;
 
+    .fa-chevron-right {
+        font-size: 1.5rem;
+      }
+
     .fa-box-open,
     .fa-record-vinyl,
     .fa-comments {
