--- a/Apple_store/styles/style.scss
+++ b/Apple_store/styles/style.scss
@@ -41,9 +41,6 @@ body {
 }
 
 @media (min-width: 1068.98px) {
-  html {
-    font-size: 55%;
-  }
 
   .nav_items_xmark {
     display: none;
@@ -130,7 +127,7 @@ body {
   }
 
   .presentcard {
-    min-height: 50vh;
+    min-height: 40vh;
     .content {
       margin-top: 30rem;
     }
@@ -201,12 +198,115 @@ body {
 
     // About Ipad
     .about_ipad {
+      margin-top: 3rem;
       height: 40vh;
+      background-size: auto;
+      background-position:bottom;
+      display: block;
       
       .content_right {
-        margin: 0;
-        padding-right: 5rem;
+        padding: 0 1rem;
+      }
+    }
+
+    // Boxar first page
+    .gallery .box-container {
+      columns: 2 37rem;
+
+      .box-gallery1,
+      .box-gallery2,
+      .box-gallery3,
+      .box-gallery4,
+      .box-gallery5,
+      .box-gallery6 {
+        min-height: 30vh;
+        margin-bottom: 1rem;
       }
     }
   }
+
+  @media (min-width: 297.98px) and (max-width: 375.98px){
+    html {
+      font-size: 45%;
+    }
+
+    .home {
+      min-height: 35vh;
+      .big_text_xl {
+        font-size: 6rem;
+        font-weight: 500;
+        padding: 3rem 0 5rem;
+      }
+    }
+
+    .presentcard {
+      min-height: 35vh;
+      .content {
+        margin-top: 30rem;
+      }
+      .big_text_xl_light {
+        font-size: 3rem;
+      }
+      .text_light_y {
+        font-size: 2rem;
+      }
+    }
+
+    // About Ipad
+    .about_ipad {
+      margin-top: 3rem;
+      height: 35vh;
+      background-size: auto;
+      background-position:bottom;
+      display: block;
+      
+      .content_right {
+        padding: 0 1rem;
+      }
+    }
+
+    // Boxar first page
+    .gallery .box-container {
+      columns: 2 37rem;
+
+      .box-gallery1,
+      .box-gallery2,
+      .box-gallery3,
+      .box-gallery4,
+      .box-gallery5,
+      .box-gallery6 {
+        min-height: 30vh;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+
+  // Mac page
+
+  .home_mac {
+    min-height: 50vh;
+    .big_text_xl_0 {
+      font-size: 4rem;
+      font-weight: 500;
+      
+    }
+    .content{
+      padding: 0;
+    }
+  }
+
+  .dark{
+    min-height: 40vh;
+    background-color: black;
+
+  }
+  .macBook_pro {
+      margin-top: 3rem;
+      min-height: 40vh;
+      background-size: auto;
+      background-position: bottom;
+      display: block;
+      
+      
+    }
 }
