--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -576,16 +576,18 @@
   min-height: 15vh;
 
   .img_nav_support {
-    display: flex;
-
+    display: flex; 
+    gap: 8rem;
     a {
+      color: black;
       display: flex;
       flex-direction: column;
       justify-content: center;
       font-size: 8rem;
-      width: 200px;
-      height: 200px;
-      color: black;
+      img{
+        align-self: center;
+        margin: 3rem;
+      }
     }
 
     span {
@@ -603,44 +605,57 @@
   justify-content: center;
   align-items: center;
   min-height: 20vh;
-
   .img_link_support {
     display: flex;
     justify-content: center;
-    border-top: 1px solid #7b7b7b;
-    border-bottom: 1px solid #7b7b7b;
+    border-top: 1px solid #7b7b7b33;
+    border-bottom: 1px solid #7b7b7b33;
     font-weight: 100;
     width: 100%;
-
+    
     a {
+      margin: 5rem 0;
+      padding: 0 5rem;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-between;
+      row-gap: 3rem;
       font-size: 8rem;
-      width: 200px;
-      height: 200px;
-      color: black;
+      color: #0070c9;
+      img{
+        align-self: center;
+      }
     }
-
+    .img_link_navx{
+      border-left: 1px solid#7b7b7b33;
+      border-right: 1px solid#7b7b7b33;
+    }
     span {
       font-size: 2.5rem;
       font-weight: 300;
     }
 
-    .img_link_navix {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-self: center;
-      border-left: 1px solid #7b7b7b;
-      border-right: 1px solid #7b7b7b;
-      height: 60%;
-      margin: 2rem;
-    }
-
     .link_nav {
       font-size: 1.8rem;
       font-weight: 300;
+    }
+  }
+}
+@media (max-width: 700px){
+  .img_link_support{
+    flex-direction: column;
+    
+    a{
+      margin: 1rem 1rem;
+      width: 75vw;
+      align-self: center;
+      padding-top: 4rem;
+      padding-bottom: 4rem;
+    }
+    .img_link_navx{
+
+      border: 1px 0px 1px 0px solid#7b7b7b33; 
+      
     }
   }
 }
