--- a/Apple_store/partials/_headings.scss
+++ b/Apple_store/partials/_headings.scss
@@ -703,7 +703,7 @@
   .content_get_support {
     margin-top: -5rem;
     text-align: left;
-    margin-left: 10rem;
+    margin-left: 20%;
 
     p{
       text-align: left;
