--- a/Apple_store/styles/style.css
+++ b/Apple_store/styles/style.css
@@ -929,7 +929,7 @@ footer .legal ul li:last-child {
 .get_support .content_get_support {
   margin-top: -5rem;
   text-align: left;
-  margin-left: 10rem;
+  margin-left: 20%;
 }
 .get_support .content_get_support p {
   text-align: left;
@@ -1289,6 +1289,62 @@ footer .legal ul li:last-child {
   margin-top: 1rem;
   margin-bottom: 2rem;
   padding: 0 5rem;
+}
+
+.link_section_support {
+  text-align: left;
+  margin-left: 50rem;
+  padding-top: 3rem;
+}
+.link_section_support h2 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.link_section_support a {
+  font-size: 2rem;
+  font-weight: 200;
+}
+.link_section_support .fa-chevron-right {
+  font-size: 1rem;
+}
+
+.text_section_support1 {
+  max-width: 50%;
+  margin: auto;
+  padding: 3rem;
+  border-bottom: 1px solid lightgray;
+  flex-direction: row;
+}
+.text_section_support1 h2 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.text_section_support1 p {
+  font-size: 2rem;
+  font-weight: 200;
+}
+.text_section_support1 a {
+  font-size: 2rem;
+  font-weight: 200;
+}
+
+.text_section_support2 {
+  max-width: 50%;
+  margin: auto;
+  padding: 3rem;
+  border-bottom: 1px solid lightgray;
+}
+.text_section_support2 h2 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.text_section_support2 p {
+  font-size: 2rem;
+  font-weight: 200;
+}
+.text_section_support2 a {
+  font-size: 2rem;
+  font-weight: 200;
 }
 
 section {
